cluster-services/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: argocd.loenskov.com
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - argocd.loenskov.com
    secretName: argocd-tls
  rules:
  - host: argocd.loenskov.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
